# degrees-of-management-rs

./: .gitignore  LICENSE  README-ZH.md  README.md
.github/workflows/: build-and-release.yml
mod/: README.md  boot.json  copyFile.js  package-lock.json  package.json  webpack.config.js
mod/replace/: find_en.json  replaceIndex.json  replace_en.json  replace_zh.json
mod/twee/: save_sync_menu.twee
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: constants.rs  main.rs
server/src/foundation/: config.rs  mod.rs  registry.rs  structure.rs
server/src/router/: index.rs  mod.rs  play.rs  repo.rs  save.rs
server/src/util/: extract.rs  file.rs  mod.rs  resolve.rs  vfs.rs
server/templates/: index.html
