[package]
name = "server"
version = "1.0.5"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
lazy_static = "1.5.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
mime_guess = "2.0.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
chrono = "0.4.40"
askama = "0.14.0"
serde_yaml = "0.9.34"

[build-dependencies]
askama = "0.14.0"
